# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py  common_logic_bg.py  logics_brain_games.py
brain_games/games/: brain_calc_game_logic.py  brain_even_game_logic.py  brain_gcd_game_logic.py  brain_prime_game_logic.py  brain_progression_game_logic.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
